// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vytvoř ročník s jednou kategorií 1`] = `
Array [
  Object {
    "__v": 0,
    "datum": 2017-06-10T00:00:00.000Z,
    "kategorie": Array [
      Object {
        "kategorie": Array [
          Object {
            "__v": 0,
            "maxVek": 49,
            "minVek": 40,
            "pohlavi": "zena",
            "typ": "maraton",
          },
        ],
        "maStartCisla": true,
        "startCisla": "1-100",
        "startovne": Object {
          "naMiste": 200,
          "predem": 150,
        },
        "typ": "maraton",
      },
    ],
    "rok": 2017,
    "ubytovani": Array [],
  },
]
`;

exports[`vytvoř ročník s ubytováním 1`] = `
Array [
  Object {
    "__v": 0,
    "datum": 2017-06-10T00:00:00.000Z,
    "kategorie": Array [
      Object {
        "kategorie": Array [
          Object {
            "__v": 0,
            "maxVek": 49,
            "minVek": 40,
            "pohlavi": "zena",
            "typ": "maraton",
          },
          Object {
            "__v": 0,
            "maxVek": 59,
            "minVek": 50,
            "pohlavi": "zena",
            "typ": "maraton",
          },
        ],
        "maStartCisla": true,
        "startCisla": "1-100",
        "startovne": Object {
          "naMiste": 200,
          "predem": 150,
        },
        "typ": "maraton",
      },
    ],
    "rok": 2017,
    "ubytovani": Array [
      Object {
        "den": "pátek",
        "poplatek": 50,
      },
      Object {
        "den": "sobota",
        "poplatek": 60,
      },
    ],
  },
]
`;
